<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:paddingTop="20sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectScan"
        android:textSize="20sp"
        android:textColor="#000"
        android:paddingBottom="20sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40sp"
        android:paddingRight="20sp"
        android:paddingLeft="20sp"
        android:paddingBottom="100sp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phCamera"
            android:textSize="15sp"
            android:id="@+id/phCamera"
            android:textStyle="bold"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scantype"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:onClick="scan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exScan"
            android:textSize="15sp"
            android:id="@+id/exScan"
            android:textStyle="bold"/>


    </LinearLayout>
    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cncl"
        android:onClick="onCancel"
        android:background="@drawable/butnormal"
        android:layout_marginBottom="33dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>