<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView android:layout_width="wrap_content"
        android:id="@+id/imageView1"
        android:src="@drawable/qrcode"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_marginTop="70dp">
    </ImageView>

    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/textView"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:layout_weight="0.09"
        android:textSize="20sp"
        android:layout_marginTop="29dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:layout_weight="0.07"
        android:paddingBottom="50dp"
        android:layout_gravity="center_horizontal" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30sp"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue"
            android:id="@+id/button"
            android:onClick="cont"
            android:layout_gravity="end"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>