<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="asset.com.assetmanager1.ScanFile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/backView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/scn"
                    android:textStyle="bold"
                    android:id="@+id/textView5"
                    android:layout_marginRight="100dp"
                    android:layout_marginLeft="100dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20sp"
                android:paddingBottom="20sp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skip"
                    android:id="@+id/skipbutt"
                    android:background="@drawable/butnormal1"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:onClick="skip"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:id="@+id/nextbutt"
                    android:background="@drawable/butnormal1"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:onClick="next"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/cancelbutt"
                    android:background="@drawable/butnormal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:onClick="cancel"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>