<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="15sp"
    android:paddingBottom="20sp"
    android:paddingTop="10sp"
    android:paddingLeft="15sp"
    android:fitsSystemWindows="true"
    tools:context="asset.com.assetmanager1.NewFile">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:id="@+id/button4"
        android:onClick="Continue"
        android:layout_marginTop="10sp"
        android:background="@drawable/butnormal1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button5"
        android:layout_marginTop="10sp"
        android:background="@drawable/butnormal"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="cancel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/filename"
        android:id="@+id/textView6"
        android:layout_marginTop="50dp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/jobtype"
        android:id="@+id/textView8"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:textSize="30sp"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView6" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button4"
        android:layout_below="@+id/spinner">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/line1"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:isScrollContainer="true"
        android:background="@drawable/textshape1"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:weightSum="1"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button4">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:id="@+id/linearLayout"
            android:onClick="onAddNewClicked"
            android:layout_gravity="center_horizontal"
            android:minHeight="40dp"
            android:weightSum="1">

            <Button
                android:id="@+id/fab"
                android:layout_width="46dp"
                android:layout_height="44dp"
                android:layout_marginRight="31dp"
                android:layout_marginEnd="31dp"
                android:background="@drawable/add2"
                android:paddingLeft="20dp"
                android:onClick="onAddNewClicked"
                android:paddingRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/newitem"
                android:id="@+id/textView9"
                android:onClick="onAddNewClicked"
                android:textSize="28sp" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>